Bug 100823 - Crash in: mergedlo.dll
Summary: Crash in: mergedlo.dll
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86 (IA32) All
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2016-07-09 13:08 UTC by Regina Henschel
Modified: 2016-10-25 18:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["mergedlo.dll"]


Attachments
GDB trace of the crash (18.41 KB, text/plain)
2016-07-18 15:28 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2016-07-09 13:08:38 UTC
This bug was filed from the crash reporting server and is br-24dcd614-5e9d-4f64-9e32-f284de39b3a5.
=========================================
This happened in Draw not in Impress, but Draw was not available in the list on the website.

What I have done until the crash:
Start with new document.
Insert > Field > file name
Mark the text of the field.
Use Style&Formatting from the sidebar.
Right-click item 'Default'
Click item 'New'.
Crash.

If you use the button "New Style" in the top-right corner of the Style&Formatting dialog, then it does not crash.

But when you then use the new created style and right-click it, and then click on item "Modify", it crashes again.

Tested again with a shortened work-flow, which crashed as well:
Start with new document.
Use Style&Formatting from the sidebar.
Right-click item 'Default'
Click item 'New'.
Crash.
Comment 1 Buovjaga 2016-07-17 08:34:55 UTC
Repro crash.

No crash in 5.1.4.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: ab1b351840160655a9f0caedbb35e9fdf203c5a0
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on July 16th 2016
Comment 2 Caolán McNamara 2016-07-17 16:23:17 UTC
no crash for me 64bit Linux dbgutil 997c7accd393bc665538403a5738ce1a626d9665.

It might help to get a real backtrace with symbols, http://crashreport.libreoffice.org/stats/crash_details/24dcd614-5e9d-4f64-9e32-f284de39b3a5 is very very sparse
Comment 3 Buovjaga 2016-07-18 15:28:46 UTC
Created attachment 126283 [details]
GDB trace of the crash

I have symbols enabled.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: ab1b351840160655a9f0caedbb35e9fdf203c5a0
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on July 16th 2016
Comment 4 Commit Notification 2016-07-18 15:38:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=918b9a4f38d017ecd813fb59d8c288a00557e2fb

Resolves: tdf#100823 crash during PopupMenu dtor

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2016-07-18 15:38:43 UTC
I think this doesn't affect 5-2 so doesn't need a backport there
Comment 6 Buovjaga 2016-07-19 05:58:44 UTC
Verified as fixed. I could repro the crash with yesterday's Win build and with today's build the crashing is gone.
I could also crash with simply modifying the default style right after starting Draw and this crash is also gone now.

Win 7 Pro 64-bit Version: 5.3.0.0.alpha0+
Build ID: 62442d9066ea553a4b68b8a93fa54748cbe96e06
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-07-19_00:20:50
Locale: fi-FI (fi_FI); Calc: CL