Resolves: tdf#100823 crash during PopupMenu dtor

Change-Id: I6d9aed05a76311a13470c9072543609f5a87501d